[package]
name = "neo4j-cypher-props"
version = "0.1.2"
edition = "2021"
description = "Enhance Neo4j Cypher Queries with Properties"
repository = "https://github.com/stefanciprian/neo4j-cypher-props.git"
license= "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
